<resources>
    <string name="app_name">Amazing places of Kryvyi Rih</string>
    <string name="small_app_name">APOKR</string>
    <string name="loading">Завантаження...</string>
    <string name="login">Логін</string>
    <string name="password">Пароль</string>
    <string name="sing_in">Увійти</string>
    <string name="sing_up">Зареєструватися</string>
    <string name="sing_up_underline"><u>Зареєструватися</u></string>
    <string name="forgotpass"><u>Забули пароль?</u></string>
    <string name="email">E-mail</string>
    <string name="confirm_pass">Підтвердіть пароль</string>
    <string name="back">Назад</string>
    <string name="restore">Відновити</string>
    <string name="password_recovery">Відновити пароль</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Налаштування</string>

    <string name="menu_home">Головна</string>
    <string name="menu_map">Визначні місця</string>
    <string name="title_activity_maps">Карта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="catalog">Каталог</string>
    <string name="main">Головна</string>
    <string name="history">Історія</string>
    <string name="username">Логін:</string>
    <string name="last_visited">Останнє відвідане місце</string>
    <string name="number_of_places_visited">Кількість відвіданих місць:</string>
    <string name="place_title">Назва місця</string>
    <string name="title">Назва:</string>
    <string name="date">Дата:</string>
    <string name="category">Категорія:</string>
    <string name="place_category">Категорія місця</string>
    <string name="small_description">Малий опис:</string>
    <string name="current_destination">Поточна ціль</string>
    <string name="all_places">Усі місця</string>
    <string name="list">Список</string>
    <string name="details">Деталі</string>
    <string name="login_error">Пошта або пароль не вірні!</string>
    <string name="email_error">Помилка пошти!</string>
    <string name="password_error">Помилка паролю!</string>
    <string name="logout">Вийти з акаунта</string>
    <string name="logout_message">Ви впевнені що бажаєте вийти?</string>
    <string name="mesage_exit_but_can">Відмінити</string>
    <string name="mesage_exit_but_sub">Вийти з акаунта</string>
    <string name="hello">Привіт</string>
    <string name="not_login">Ви не ввели логін!</string>
    <string name="not_email">Ви не ввели пошту!</string>
    <string name="not_password">Ви не ввели пароль!</string>
    <string name="not_confirmpassword">Ви не підтвердили пароль!</string>
    <string name="password_mismatch">Паролі не співпадають!</string>
    <string name="select_a_category">Виберіть категорію</string>
    <string name="category_militaryPatriotic">Військові</string>
    <string name="category_culturalObjects">Культурні</string>
    <string name="category_religiousObjects">Релігіозні</string>
    <string name="category_historicalObjects">Історичні</string>
    <string name="category_architecturalObjects">Архітектурні</string>
    <string name="category_naturalObjects">Природні</string>
    <string name="category_urbanObjects">Урбаністичні</string>
    <string name="category_otherObjects">Інші</string>
    <string name="blur_image">blur image</string>
    <string name="main_image">main image</string>
    <string name="address">Адреса:</string>
    <string name="description">Опис:</string>
    <string name="view_on_map">На карті</string>
    <string name="details_withouttwodots">Деталі</string>
    <string name="about_destination">Ціль</string>
    <string name="whole_route">Шлях</string>
    <string name="about_place">Про місце</string>
    <string name="add_to_route">Додати в маршрут</string>
    <string name="start_route">Почати</string>
    <string name="start">Почати</string>
    <string name="return_to_list">Повернутися до списку</string>
    <string name="added_to_route">Додано</string>
    <string name="nothing_here_yet">Поки що тут нічого немає</string>
    <string name="go_to_catalog">Перейти в каталог</string>
    <string name="password_reset_label">Лист з указівками було надіслано на вказану пошту!</string>
    <string name="ok">OK</string>
    <string name="return_to_catalog">Повернутися до каталогу</string>
    <string name="exit">Вихід</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_from_history">Видалити з історії</string>
    <string name="delete_ask">Ви впевнені що бажаєте видалити це місце з історії відвідування?</string>
    <string name="delete_history">Видалення!</string>
    <string name="yes">Так</string>
    <string name="NO">НІ</string>
    <string name="canceled">Виділення відмінено!</string>
    <string name="now_we_are_heading">Зараз прямуємо до:</string>
    <string name="control">Керування</string>
    <string name="route_controller">Керування шляхом</string>
    <string name="open_google_map">Відкрити гугл карти?</string>
    <string name="route_control">Керування маршрутом</string>
    <string name="skip">Пропустити поточну ціль</string>
    <string name="skip_and_mark_visited">Пропустити поточну ціль</string>
    <string name="all_route">Показати весь маршрут</string>
    <string name="calculate_route">Прокласти маршрут до цілі</string>
    <string name="menu_control">Керування меню</string>
    <string name="hide">Приховати</string>
    <string name="skip_visited">Пропустити як відвідане</string>
    <string name="next_destination">Наступна ціль</string>
    <string name="change_current">Змінити поточну ціль</string>
    <string name="ask_skip">Ви впевнені що бажаєте пропустити поточну ціль?</string>
    <string name="end_route_warning">Це остання точка подорожі, ви впевненні що хочете завершити маршрут?</string>
    <string name="warning">Попередження</string>
    <string name="end_route">Завершити маршрут</string>
    <string name="ask_endr_route">Ви впевнені що бажаєте завершити маршрут?</string>
    <string name="menu">Меню</string>
    <string name="logout_from_acaunt">Вихід з акаунта</string>
    <string name="route_to_destination">Маршрут до цілі</string>
    <string name="chopse_destination">Виберіть ціль</string>
    <string name="cancel">Відмінити</string>
    <string name="list_of_destination">Список цілей</string>
    <string name="d_route">Цілі маршрута</string>
    <string name="add_des">Додати ціль</string>
    <string name="del_des">Видалити ціль</string>
    <string name="delete">Видалення</string>
    <string name="chose_destination_to_delete">Виберіть ціль яку хочете прибрати з маршруту:</string>
    <string name="destination">Ціль: </string>
    <string name="destination_close">Ви майже дісталися цілі!</string>
    <string name="ask_about_current_point">Бажаєте переглянути інформацію про ціль?</string>
    <string name="ask_pause_route">Ви впевнені що бажаєте призупинити подорож?</string>
    <string name="no_points">Не має цілей для заміни!</string>
    <string name="no_point_for_delete">Не має цілей для видалення!</string>
    <string name="gps_network_not_enabled">У вас не ввімкнений GPS! Ввімкніть GPS!</string>
    <string name="open_location_settings">Ввімкнути</string>
    <string name="wifi">Wi-Fi</string>
    <string name="network">Мобільний інтернет</string>
    <string name="NetworkError">Відсутнє підключення до мережі інтернет, підключіть інтернет!</string>
    <string name="support">Підтримка</string>
    <string name="aboutApp">Про додаток</string>
    <string name="feedback">Зворотній зв\'зок</string>
    <string name="aboutDevelored">Про розробника</string>
    <string name="github"><u>https://github.com/SilentProg</u></string>
    <string name="textFeedback">Зворотній зв\'язок</string>
    <string name="send">Надіслати</string>
</resources>