<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_bottomsheet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/added_to_route"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btnBottomSheetWholeRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whole_route"
        android:layout_marginTop="16dp"
        android:width="150dp"
        android:textSize="14sp"
        android:textAllCaps="true"
        style="@style/Widget.Material3.Button"
        app:layout_constraintTop_toBottomOf="@id/label_bottomsheet_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBottomSheetStart"/>

    <Button
        android:id="@+id/btnBottomSheetStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:width="150dp"
        android:textSize="14sp"
        android:textAllCaps="true"
        style="@style/Widget.Material3.Button"
        app:layout_constraintTop_toTopOf="@id/btnBottomSheetWholeRoute"
        app:layout_constraintEnd_toStartOf="@id/btnBottomSheetWholeRoute"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnBottomSheetReturnToList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btnBottomSheetStart"
        app:layout_constraintEnd_toEndOf="@id/btnBottomSheetWholeRoute"
        style="@style/Widget.Material3.Button"
        android:textSize="14sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/btnBottomSheetStart"
        android:text="@string/return_to_list"
        android:layout_marginBottom="10dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>